--- a/public/scss/base/_main.scss
+++ b/public/scss/base/_main.scss
@@ -1,6 +1,8 @@
 html {
   overflow-y: scroll;
   min-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
 }
 
